# FabricPackage

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: PYPI_PUBLISH.md
fabrictools/: __init__.py  _logger.py  _paths.py  _spark.py  _version.py  data_quality.py  dimensions.py  lakehouse.py  prepare.py  warehouse.py
fabrictools/core/: __init__.py  logging.py  paths.py  spark.py
fabrictools/dimensions/: __init__.py  _legacy.py  _targets.py  date.py  geo.py  pipeline.py
fabrictools/io/: __init__.py  discovery.py  lakehouse.py  warehouse.py
fabrictools/pipelines/: __init__.py  config.py
fabrictools/prepare/: __init__.py  _legacy.py  aggregations.py  pipeline.py  resolve.py  schema.py  semantic.py  transform.py
fabrictools/quality/: __init__.py  clean.py  pipeline.py  scan.py
tests/: test_dimensions.py  test_lakehouse.py  test_prepare.py  test_warehouse.py
