[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fabrictools"
version = "0.1.0"
description = "User-friendly PySpark helpers for Microsoft Fabric Lakehouses and Warehouses"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Willy Kinfoussia", email = "willy.kinfoussia@gmail.com" }]
keywords = ["microsoft-fabric", "pyspark", "delta", "lakehouse", "warehouse", "azure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]

# pyspark and delta-spark are listed as optional because Microsoft Fabric
# already provides them in its Spark runtime environment.
dependencies = []

[project.optional-dependencies]
spark = [
    "pyspark>=3.3",
    "delta-spark>=2.4",
]
dev = [
    "pyspark>=3.3",
    "delta-spark>=2.4",
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/fabrictools"
Repository = "https://github.com/your-org/fabrictools"
Issues = "https://github.com/your-org/fabrictools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fabrictools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
