[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabrictools"
dynamic = ["version"]
description = "User-friendly PySpark helpers for Microsoft Fabric Lakehouses and Warehouses"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Willy Kinfoussia", email = "willy.kinfoussia@gmail.com" }]
keywords = ["microsoft-fabric", "pyspark", "delta", "lakehouse", "warehouse", "azure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]

# pyspark and delta-spark are listed as optional because Microsoft Fabric
# already provides them in its Spark runtime environment.
dependencies = [
    "countrystatecity-countries",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.3",
    "delta-spark>=2.4",
]
visualization = [
    "plotly>=5.0",
]
dev = [
    "countrystatecity-countries",
    "pyspark>=3.3",
    "delta-spark>=2.4",
    "plotly>=5.0",
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/willykinfoussia/FabricPackage"
Repository = "https://github.com/willykinfoussia/FabricPackage"
Issues = "https://github.com/willykinfoussia/FabricPackage/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fabrictools*"]

[tool.setuptools.dynamic]
version = { attr = "fabrictools._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
